--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,21 +10,33 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Setup .NET 9
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '9.0.x'
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '9.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+    - name: Decode and save .snk file
+      shell: pwsh
+      run: |
+        $base64String = "${{ secrets.SNK_KEY_BASE64 }}"
+        $bytes = [System.Convert]::FromBase64String($base64String)
+        [System.IO.File]::WriteAllBytes("Assets/UWN-GH.snk", $bytes)
 
-      - name: Pack
-        run: dotnet pack --configuration Release --no-build --output nupkgs
+    - name: Build and sign the project
+      run: dotnet build --configuration Release --no-restore
 
-      - name: Publish to NuGet
-        run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Remove the .snk file
+      run: rm -f Assets/UWN-GH.snk
+      shell: bash
+      
+    - name: Pack
+      run: dotnet pack --configuration Release --no-build --output nupkgs
+
+    - name: Publish to NuGet
+      run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
