--- a/.github/workflows/build-and-publish-manual.yml
+++ b/.github/workflows/build-and-publish-manual.yml
@@ -1,4 +1,4 @@
-name: Build and Publish NuGet Package (manual trigger)
+name: Build and Publish (manual trigger)
 
 on:
   workflow_dispatch
@@ -18,6 +18,9 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
+      
+    - name: Clean old NuGet packages
+      run: Remove-Item Uwn.Razor/Uwn.Razor/bin/Release/*.nupkg -ErrorAction SilentlyContinue
 
     - name: Decode and save .snk file
       shell: pwsh
@@ -30,11 +33,10 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Remove the .snk file
-      run: rm -f Assets/UWN-GH.snk
-      shell: bash
+      run: Remove-Item Assets/UWN-GH.snk -ErrorAction SilentlyContinue
       
-    - name: Pack
-      run: dotnet pack --configuration Release --no-build --output nupkgs
+#   - name: Pack
+#     run: dotnet pack --configuration Release --no-build --output nupkgs
 
     - name: Publish to NuGet
       run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
