--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,9 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
+      
+    - name: Clean old NuGet packages
+      run: Remove-Item Uwn.Razor/Uwn.Razor/bin/Release/*.nupkg -ErrorAction SilentlyContinue
 
     - name: Decode and save .snk file
       shell: pwsh
@@ -32,11 +35,10 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Remove the .snk file
-      run: rm -f Assets/UWN-GH.snk
-      shell: bash
+      run: Remove-Item Assets/UWN-GH.snk -ErrorAction SilentlyContinue
       
-    - name: Pack
-      run: dotnet pack --configuration Release --no-build --output nupkgs
+#   - name: Pack
+#     run: dotnet pack --configuration Release --no-build --output nupkgs
 
     - name: Publish to NuGet
       run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
