--- a/.github/workflows/build-and-publish-manual.yml
+++ b/.github/workflows/build-and-publish-manual.yml
@@ -38,9 +38,5 @@ jobs:
 #   - name: Pack
 #     run: dotnet pack --configuration Release --no-build --output nupkgs
 
-    - name: List nupkg files before push
-      run: dir bin\Release\
-      shell: cmd
-
     - name: Publish to NuGet
-      run: dotnet nuget push bin/Release/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push bin\Release\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
