--- a/Uwn.Razor.csproj
+++ b/Uwn.Razor.csproj
@@ -9,7 +9,7 @@
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PackageIcon>Assets\chaos-green-32.png</PackageIcon>
+		<PackageIcon>Assets\codex-32.png</PackageIcon>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageProjectUrl>https://github.com/UWN-Chrisbee76/Uwn.Razor</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
@@ -24,10 +24,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Update="Assets\chaos-green-32.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
 		<None Update="LICENSE">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
