--- a/Uwn.Razor/Uwn.Razor.csproj
+++ b/Uwn.Razor/Uwn.Razor.csproj
@@ -24,6 +24,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Update="Assets\codex-32.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 		<None Update="LICENSE">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
