--- a/.github/workflows/build-and-publish-manual.yml
+++ b/.github/workflows/build-and-publish-manual.yml
@@ -39,4 +39,4 @@ jobs:
 #     run: dotnet pack --configuration Release --no-build --output nupkgs
 
     - name: Publish to NuGet
-      run: dotnet nuget push bin\Release\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push Uwn.Razor/Uwn.Razor/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
