--- a/Uwn.Razor.Demo/Properties/launchSettings.json
+++ b/Uwn.Razor.Demo/Properties/launchSettings.json
@@ -12,7 +12,7 @@
 		"https": {
 			"commandName": "Project",
 			"launchBrowser": true,
-			"launchUrl": "Components/Bootstrap/Card",
+			"launchUrl": "",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			},
