Update publish profile

--- a/.github/workflows/build-and-publish-manual.yml
+++ b/.github/workflows/build-and-publish-manual.yml
@@ -36,7 +36,7 @@ jobs:
       run: Remove-Item Assets/UWN-GH.snk -ErrorAction SilentlyContinue
       
     - name: Pack
-      run: dotnet pack --configuration Release --no-build --output nupkgs
+      run: dotnet pack --configuration Release --output nupkgs
 
     - name: Publish to NuGet
       run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
