--- a/.github/workflows/build-and-publish-manual.yml
+++ b/.github/workflows/build-and-publish-manual.yml
@@ -7,6 +7,10 @@ jobs:
   publish:
     runs-on: windows-latest
 
+    env:
+     CONFIGURATION: Release
+     PACKAGES_DIR: ${{ github.workspace }}\nupkgs
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -20,7 +24,10 @@ jobs:
       run: dotnet restore
       
     - name: Clean old NuGet packages
-      run: Remove-Item nupkgs/*.nupkg -ErrorAction SilentlyContinue
+      shell: pwsh
+      run: |
+          New-Item -ItemType Directory -Force "$env:PACKAGES_DIR" | Out-Null
+          Remove-Item "$env:PACKAGES_DIR\*.nupkg" -ErrorAction SilentlyContinue
 
     - name: Decode and save .snk file
       shell: pwsh
@@ -29,14 +36,11 @@ jobs:
         $bytes = [System.Convert]::FromBase64String($base64String)
         [System.IO.File]::WriteAllBytes("Assets/UWN-GH.snk", $bytes)
 
-    - name: Build and sign the project; this also creates the NuGet package
-      run: dotnet build --configuration Release --no-restore
-      
-#   - name: Create the NuGet package
-#     run: dotnet pack --configuration Release --output nupkgs
-
-    - name: Publish to NuGet
-      run: dotnet nuget push D:/a/Uwn.Razor/Uwn.Razor/Uwn.Razor/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Build and Pack
+      run: dotnet pack --configuration ${{ env.CONFIGURATION }} --no-restore -p:PackageOutputPath="${{ env.PACKAGES_DIR }}"
 
     - name: Remove the .snk file
       run: Remove-Item Assets/UWN-GH.snk -ErrorAction SilentlyContinue
+
+    - name: Publish to NuGet
+      run: dotnet nuget push "${{ env.PACKAGES_DIR }}\*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
